<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="Pick one of the user and algorithm to Predict bradycardia"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_below="@+id/title"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/radioGroup"
            android:text="@string/user2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/radioGroup"
            android:text="@string/user3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user4"
            android:checked="true"/>


    </RadioGroup>
    <EditText
        android:id="@+id/heartrate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/predict1text"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:hint="Enter Heartrate"
        android:inputType="number"
        android:focusedByDefault="true"/>

    <LinearLayout
        android:id="@+id/linear1Layout"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_below="@+id/heartrate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="165dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/SVM"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/algo1"

            android:textColor="@color/colorPrimaryDark" />


    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/predicttext"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1Layout"

        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        >

        <TextView
            android:id="@+id/textViewPredict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            android:textSize="18dp"/>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2Layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        >


        <Button
            android:id="@+id/NB"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDark"

            android:text="@string/algo2" />

        <Button
            android:id="@+id/DT"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginStart="30dp"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDark"

            android:text="@string/algo4" />
        <Button
            android:id="@+id/LR"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginStart="30dp"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDark"

            android:text="@string/algo3" />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/predict1text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2Layout"

        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        >

        <TextView
            android:id="@+id/textViewPredict1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            android:textSize="18dp"/>


    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="110dp"
        android:layout_marginTop="550dp"
        android:layout_marginRight="50dp">



    </LinearLayout>

</RelativeLayout>