<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="Pick one of the user to view heartrate "
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear1Layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/Karthiga"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/user1"

            android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/Mandar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginStart="30dp"

        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorPrimaryDark"

        android:text="@string/user2" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2Layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="115dp"
        android:orientation="horizontal"
        >


        <Button
            android:id="@+id/Adhithiya"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDark"

            android:text="@string/user3" />

        <Button
            android:id="@+id/Aikya"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginStart="30dp"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDark"

            android:text="@string/user4" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/image"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2Layout"

        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        >


        <ImageView
            android:id="@+id/heartRate_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="110dp"
        android:layout_marginTop="550dp"
        android:layout_marginRight="50dp">

    <Button
        android:id="@+id/redirect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text=" Detect Bradycardia-->"

        android:textColor="@color/colorPrimaryDark" />


</LinearLayout>

</RelativeLayout>